// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorPageLink component renders a help link when link parameters present 1`] = `
<EuiLink>
  <Link
    data-test-subj="monitor-page-link-bad-ssl"
    to="/monitor/YmFkLXNzbA==/selectedPingStatus=down"
  />
</EuiLink>
`;

exports[`MonitorPageLink component renders the link properly 1`] = `
<EuiLink>
  <Link
    data-test-subj="monitor-page-link-bad-ssl"
    to="/monitor/YmFkLXNzbA=="
  />
</EuiLink>
`;
